styles/main.css
/* ... */
.top-me {
  height: 80%;
  z-index: 1;
  position: absolute;
  top: 0;
  right: 0;
  box-shadow: 0 0 30px rgba(248, 248, 243, 0.25);
  display: none;
}

.home-header-text {
  padding: 5rem 0 10rem 2rem;
  max-width: 360px;
  z-index: 2;
}

.header-line {
  margin-top: 2rem;
}

.top-sm-links {
  justify-content: left;
  margin-top: 2rem;
}

.top-sm-links li {
  margin-left: 0;
  margin-right: 20px;
}

.sub-header {
  margin-top: 20px;
}

.transition {
  position: absolute;
  bottom: 0;
  width: 100%;
}

/** PROJECTS **/

.projects-container {
  position: relative;
  max-width: 1600px;
  margin: 0 auto;
}

.projects-container a {
  color: inherit;
  text-decoration: none;
}

.project-section {
  margin: 2rem 0;
  height: 85vh;
  max-height: 800px;
  background-color: #121121;
  display: flex;
  align-items: center;
}

.project-3 {
  background-image: linear-gradient(111.81deg, #FCF0EE 0%, #F3E5E3 100%);
  color: #121121;
}

.project-2 {
  background-image: linear-gradient(to bottom right, #1B4BF2, #72A8FF);
}

.project-1 {
  background-image: linear-gradient(to bottom right, #ECECEC, #CFD0D3);
  color: #121121;
}

.display-project-image {
  height: 40%;
  max-height: 85vh;
  object-fit: cover;
  object-position: left;
  position: absolute;
  right: 0;
  width: 40%;
}

.display-project-text {
  background-color: rgba(18, 17, 33, 0.8);
  color: #E7ECEE;
  display: block;
  margin: 0;
  padding: 2rem;
  text-align: left;
  width: 75%;
  z-index: 3;
}

.case-study-btn {
    align-items: center;
    background-color: #FEF0AE;
    color: #121121;
    display: flex;
    height: 4.4rem;
    justify-content: center;
    margin-top: 3rem;
    text-decoration: none;
    width: 17rem;
}

.case-study-btn:hover {
  box-shadow: 0 0 12px #FEF0AE;
}

/**
.invert-btn {
  background-color: #121121;
  color: #E7ECEE;
}

.invert-btn:hover {
  box-shadow: 0 0 8px #121121;
} **/

/** WHAT I OFFER **/

.offer-container {
  background-image: url("../images/office.png");
  background-attachment: fixed;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100vw;
  max-height: 50rem;
}

.offer-section {
  display: flex;
}

.offer-content {
  width: 50%;
  max-width: 30rem;
  padding: 2rem;
  margin: 2rem;
  text-align: left;
}

/** TESTIMONIALS **/

.home-slideshow-container {
  position: relative;
}

.vibe-text {
  margin: 0 auto;
  padding-top: 5rem;
  max-width: 740px;
}

.vibe-text h6 {
  font-size: 1.8rem;
  line-height: 2.5rem;
}

.attribute {
  margin-bottom: 30px;
  margin-top: 30px;
  text-align: right;
}

.dot-container {
  padding: 20px 8% 20px 8%;
  text-align: right;
}

.dot {
  background-color: #E7ECEE;
  border-radius: 50%;
  cursor: pointer;
  display: inline-block;
  height: 15px;
  margin: 0 5px;
  opacity: .2;
  transition: background-color 0.6s ease;
  width: 15px;
}

.active {
  opacity: 1;
}


/******** CASE STUDY ********/


/**** HEADER ****/

.cs-header {
  margin: 0;
}

.hero-header {
  padding: 5rem 5%;
}

.top-mockup {
  height: 100%;
  width: 100%;
}

.project-header {
  margin: 0 auto;
  padding-bottom: 5rem;
  padding: 0 2rem 5rem 2rem;
}

/** VIEW PROTOTYPE BUTTON **/

.prototype {
  background: #121121;
  box-shadow: 1px 4px 4px rgba(18, 17, 33, 0.25);
  margin: 2rem auto 0 auto;
}

.prototype a {
  color: inherit;
  text-decoration: none;
}

.prototype:hover {
  box-shadow: 0 0 20px rgba(18, 17, 33, 1);
}

.section-padding {
  padding: 0 2rem;
  margin-top: 10rem;
}

.title-padding {
  padding: 0 2rem;
}

.desktop-btn {
  display: none;
}

/** DELIVERABLES AND TOOLS **/

.deliv-and-tools {
  display: flex;
  flex-direction: row;
  margin-bottom: 5rem;
  margin-top: 1rem
}

.tools {
  margin-left: 16%;
}

/** PROBLEM & SOLUTION **/

.solution {
  margin-top: 5rem;
}

/** STICKY NAV **/

.sticky-nav {
  background-color: #4B182E;
  background-image: url("https://www.transparenttextures.com/patterns/simple-dashed.png");
  border-bottom: 2px solid #FEF0AE;
  overflow: hidden;
  position: sticky;
  top: 7rem;
  z-index: 2;
}

.sticky-header {
  align-items: center;
  display: flex;
  flex-direction: row;
  height: 6rem;
  justify-content: center;
  width: 100%;
}

.sticky-nav a, .sticky-nav h6 {
  color: #E7ECEE;
  display: block;
  padding: 20px 30px;
  text-align: center;
  text-decoration: none;
}

.sticky-nav a:hover {
  text-shadow: 0 0 10px #E7ECEE;
}

.sticky-links {
  display: none;
}

/** SURVEY **/

.survey-container {
  align-items: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-bottom: 2rem;
}

.graphic1, .graphic2 {
  padding-top: 3rem;
  position: relative;
}

.txtandgraph {
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: center;
  margin: 3rem;
}

.survey-graphic {
  display: block;
  height: 40%;
  margin: 1rem auto;
  max-width: 500px;
  width: 40%;
}

.survey-text {
  margin: 0 auto;
  max-width: 35rem;
  padding: 2rem 1rem 0 1rem;
  text-align: center;
}

/** PERSONA **/

.personas {
  display: flex;
  flex-direction: column;
  margin: 0 auto;
  max-width: 85rem;
}

.lucas, .sarah {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 3rem;
  margin: 0 auto;
}

.persona-images {
  width: 60%;
  max-width: 50rem;
}

.persona-text {
  max-width: 30rem;
  margin-top: 1rem;
  text-align: center;
}

span {
  font-style: italic;
}

/** USER STORIES **/

.stories-table {
  font-family: raleway, sans-serif;
  font-size: 1.4rem; /* 24 px */
  font-weight: 400;
  line-height: 2.8rem; /* 28px */
  margin: 3rem auto;
  width: 100%;
}

.stories-table td {
  border: 1px solid #E7ECEE;
  padding: .5rem 1rem;
}

/** FINAL CHANGES LIST **/

.check {
  color: #FEF0AE;
}

.final-changes {
  margin: 20px 8%;
}

.final-changes li {
  padding: 10px 10px ;
}
/* ... */

